beermetwice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cheers-counter
  namespace: beermetwice
spec:  
  selector:
    app: cheers-counter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: LoadBalancer
